@startuml

title __METIER's Class Diagram__\n

  package Metier {
    class Catalogue {
        - lesProduits : ArrayList<I_Produit>
        - nom : String
        + Catalogue()
        + addProduit()
        + addProduit()
        + addProduits()
        + removeProduit()
        + acheterStock()
        + vendreStock()
        + getNomProduits()
        + getNom()
        + getMontantTotalTTC()
        + toString()
        + clear()
    }
  }
  

  package Metier {
    interface I_Catalogue {
        {abstract} + addProduit()
        {abstract} + addProduit()
        {abstract} + addProduits()
        {abstract} + removeProduit()
        {abstract} + acheterStock()
        {abstract} + vendreStock()
        {abstract} + getNomProduits()
        {abstract} + getNom()
        {abstract} + getMontantTotalTTC()
        {abstract} + toString()
        {abstract} + clear()
    }
  }
  

  package Metier {
    interface I_Categorie {
        {abstract} + getNom()
        {abstract} + getTauxTVA()
    }
  }
  

  package Metier {
    interface I_Produit {
        {abstract} + ajouter()
        {abstract} + enlever()
        {abstract} + getNom()
        {abstract} + getQuantite()
        {abstract} + getPrixUnitaireHT()
        {abstract} + getPrixUnitaireTTC()
        {abstract} + getPrixStockTTC()
        {abstract} + toString()
    }
  }
  

  package Metier {
    class Produit {
        - quantiteStock : int
        - nom : String
        - prixUnitaireHT : double
        - tauxTVA : double
        + Produit()
        - ajusterNomProduit()
        + ajouter()
        + enlever()
        + getNom()
        + getQuantite()
        + getPrixUnitaireHT()
        + getPrixUnitaireTTC()
        + getPrixStockTTC()
        + toString()
    }
  }
  

  Catalogue -up-|> I_Catalogue
  Produit -up-|> I_Produit


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
